# dicomindex

./: HISTORY.md  README.md  pyproject.toml  setup.cfg
dicomindex/: cli.py  core.py  dataset.py  exceptions.py  fields.py  iterators.py  logs.py  orm.py  persistence.py  processing.py  statistics.py  threading.py  types.py
examples/: index_dicom_folder.py  query_an_index.py
tests/: conftest.py  factories.py  test_cli.py  test_core.py  test_dataset.py  test_iterators.py  test_orm.py  test_persistence.py  test_processing.py  test_statistics.py  test_threading.py
tools/: __init__.py  benchmark_iteration.py  generate_fields.py  generate_orm.py  generate_test_data.py
tools/templates/: orm.py.j2
