[tool.poetry]
name = "dicomindex"
version = "0.2.0"
description = "Index dicom files into patient->study->series->instance"
authors = ["sjoerdk <sjoerd.kerkstra@radboudumc.nl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pydicom = "^2.3.1"
SQLAlchemy = "^2.0.10"
click = "^8.1.3"
tabulate = "^0.9.0"
tqdm = "^4.65.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
dicomgenerator = "^0.8.1"
factory-boy = "^3.2.1"
Jinja2 = "^3.1.2"
types-tabulate = "^0.9.0"
python-stopwatch = "^1.0.5"

[tool.poetry.scripts]
dicomindex = "dicomindex.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
